Fix css issues on mobile

--- a/src/Components/AddNew.css
+++ b/src/Components/AddNew.css
@@ -46,6 +46,8 @@ form input[type="submit"] {
   font-weight: 900;
   font-size: 20px;
   width: 40%;
+  color: black;
+  background-color: white;
 }
 
 select {
@@ -55,4 +57,6 @@ select {
   background-position: 0.4em center;
   font-size: 1em;
   background-image: url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR6VS1TxxN3M1GoOndTyfIGYYZJpf40Zv-hdg&usqp=CAU");
+  background-color: white;
+  color: black;
 }
