--- a/src/Components/Overlay.css
+++ b/src/Components/Overlay.css
@@ -13,12 +13,18 @@
 .overlay button.close {
   width: 50px;
   height: 50px;
-
+  background-color: white;
   border-radius: 50%;
   padding: 2px;
-  right: 10px;
+  left: 10px;
   position: absolute;
   top: 10px;
+}
+
+@media screen and (min-width: 768px) {
+  .overlay button.close {
+    right: 10px;
+  }
 }
 
 .overlay svg {
