--- a/src/Components/StickyNote.css
+++ b/src/Components/StickyNote.css
@@ -10,8 +10,14 @@ ul.sticky_notes {
   justify-content: space-evenly;
   flex-wrap: wrap;
   padding-left: 0;
-  margin: 10% auto;
+  margin: 15% auto;
   width: 90vw;
+}
+
+@media screen and (min-width: 414px) {
+  ul.sticky_notes {
+    margin-top: 100px;
+  }
 }
 
 ul.sticky_notes li {
@@ -23,6 +29,8 @@ ul.sticky_notes li {
   display: block;
   width: 20vw;
   height: 30vh;
+  max-width: 350px;
+  max-height: 300px;
   min-width: 140px;
   background-color: var(--yellow);
   box-shadow: 5px 5px 7px rgba(51, 44, 44, 0.7);
